# Research_Assistant_LangGraph

./: Docker-compose.yml  Dockerfile.api  Dockerfile.frontend  README.md  pyproject.toml  requirements.txt  requirements_api.txt  requirements_frontend.txt
app/api/: main.py
app/api/core/: config.py
app/api/graph/: analyst_graph.py  interview_graph.py  nodes.py  research_graph.py  schema.py
app/api/routers/: research.py
app/api/services/: agent_service.py
app/frontend/: app.py
experiments/: test.ipynb
